# idb-2026-2

./: .gitignore  README.md  pyproject.toml
docs/: index.html  references.html  search.json
docs/clases/001-introduccion/: index.html
docs/clases/002-clima-y-confort/: analisis_clima.ipynb  index.html
docs/clases/002-conceptos-basicos-balance/: index.html
docs/clases/003-mi-primer-cubo/: index.html
docs/clases/004-entendiendo-simulacion/: index.html
docs/clases/005-obteniendo-datos-python/: 001_EDA.html  002_EDA_EPW.html  index.html
docs/clases/006_2Zonas_VentanasProtecciones/: index.html
libro/: _quarto.yml  index.qmd  references.bib
libro/clases/001-introduccion/: index.qmd
libro/clases/002-clima-y-confort/: index.qmd
libro/clases/002-conceptos-basicos-balance/: index.qmd
libro/clases/003-mi-primer-cubo/: index.qmd
libro/clases/003-mi-primer-cubo/epws/: README.md
libro/clases/003-mi-primer-cubo/notebook/: resultados_cubo.ipynb
libro/clases/004-entendiendo-simulacion/: index.qmd
libro/clases/005-obteniendo-datos-python/: 001_EDA.ipynb  002_EDA_EPW.ipynb  index.qmd
libro/clases/006_2Zonas_VentanasProtecciones/: index.qmd
