[project]
name = "idb-2026-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "iertools",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.3",
    "pandas>=2.3.3",
]

[tool.uv.sources]
iertools = { git = "https://github.com/altamarmx/iertools.git" }
